# SegmentedFusion

./: CMakeLists.txt  DataDirectory.h.in  README.md
cmake/: FindKinectSDK2.cmake
libs/InfiniTAM/Debug/: FernRelocLib.lib  InfiniTAM.lib  InfiniTAM_cli.lib  InputSource.lib  MiniSlamGraphLib.lib  ORUtils.lib
libs/InfiniTAM/Release/: FernRelocLib.lib  InfiniTAM.exp  InfiniTAM.lib  InfiniTAM_cli.exp  InfiniTAM_cli.lib  InputSource.lib  MiniSlamGraphLib.lib  ORUtils.lib
libs/InfiniTAM/include/ITMLib/Core/: ITMBasicEngine.h
proj/: CMakeLists.txt
proj/SegmentedFusion/: BodyPart.cpp  BodyPart.h  CMakeLists.txt  Functions.cpp  Functions.h  GLUIEngine.cpp  GLUIEngine.h  Header.h  HumanBody.cpp  HumanBody.h  ITMManager.cpp  ITMManager.h  InputManager.cpp  InputManager.h  MarchingCube.cpp  MarchingCube.h  RGBDMnager.cpp  RGBDMnager.h  RGBDUI.cpp  RGBDUI.h  SceneManager.cpp  SceneManager.h  Segmentatnion.cpp  Segmentatnion.h  Stitching.cpp  Stitching.h  TSDFManager.cpp  TSDFManager.h  main.cpp  main.h  myKinect.cpp  myKinect.h
src/OpenCL Kernels/: ATc.cl  Animate.cl  BSSystem.cl  BTB.cl  Bilateral.cl  Bump.cl  Bump2.cl  Bump3.cl  DataProc.cl  DenseBS.cl  GICP.cl  GICPB.cl  Jacob.cl  MarchingCube.cl  MarchingCubes.metal  MedianFilter.cl  Nmap.cl  NmapBump.cl  PseudoInverse.cl  Reduce.cl  Reduce2.cl  SolveInitPb.cl  System.cl  SystemPR.cl  SystemPRb.cl  TSDF.cl  TSDF.metal  VMap.cl  VMapBump.cl
src/datadir/: DirectoryConfig.h
